split custom label. Add list size check

--- a/force-app/main/default/classes/ResourceRemote.cls
+++ b/force-app/main/default/classes/ResourceRemote.cls
@@ -70,15 +70,15 @@ public with sharing class ResourceRemote {
     }
 
     @AuraEnabled
-    public static List<String> getNoTAMessage() {
-        List<String> noTAMessage = new List<String>();
+    public static String getNoTAMessage() {
+        ParticipantService.ParticipantState state = ParticipantService.getParticipantState();
         ResourceService resourceService = (ResourceService) ClassFactory.newInstance(ResourceService.class);
         Participant__c currentParticipant = resourceService.getParticipant();
-        if(currentParticipant.Conditions__c == 0) {
+        if((state.value == ParticipantService.ParticipantStates.ALUMNI) && (currentParticipant.Conditions__c == 0)) {
+            String noTAMessage;
             String message = Label.Resources_No_Therapeutic_Area;
-            noTAMessage.add(message.substringBefore('{'));
-            noTAMessage.add(message.substringBetween('{', '}'));
-            noTAMessage.add(message.substringAfter('}'));
+            String goToProfile = '<br /><a href="/s/settings?tab=account-settings">' + Label.Resources_Go_To_Your_Profile + '</a>';
+            noTAMessage = String.format(message, new List<String>{goToProfile});
             return noTAMessage;
         }
         return null;
