Fix null reference exceptions in Study Search

--- a/force-app/main/default/classes/StudyTrialService.cls
+++ b/force-app/main/default/classes/StudyTrialService.cls
@@ -168,10 +168,13 @@ public without sharing class StudyTrialService {
         if (sortData.sortType == 'CreatedDate DESC') {
             query += 'ORDER BY Clinical_Trial_Profile__r.CreatedDate DESC ';
         }
+
         if (sortData.sortType == 'Distance ASC') {
-            query += 'ORDER BY DISTANCE(Site__r.BillingAddress, GEOLOCATION(' + userLocation.latitude + ', ' + userLocation.longitude + '), \'mi\') ASC NULLS LAST ';
+            if (userLocation != null) {
+                query += 'ORDER BY DISTANCE(Site__r.BillingAddress, GEOLOCATION(' + userLocation.latitude + ', ' + userLocation.longitude + '), \'mi\') ASC NULLS LAST ';
+            }
         }
-        query += 'LIMIT 1000';
+
         System.debug('query: ' + query);
         List<Study_Site__c> studySites = Database.query(query);
 
