Updated Task Edit, Task table, Added custom labels

--- a/force-app/main/default/classes/PatientDelegateService.cls
+++ b/force-app/main/default/classes/PatientDelegateService.cls
@@ -61,7 +61,11 @@ public class PatientDelegateService {
                         Contact__r.Name,
                         Contact__r.FirstName,
                         Contact__r.LastName,
-                        Contact__r.Email
+                        Contact__r.Email,
+                        Contact__r.Participant_Opt_In_Status_Emails__c,
+                        Contact__r.HCP_Opt_In_Patient_Status_Emails__c,
+                        Contact__r.HCP_Opt_In_Study_Emails__c,
+                        Contact__r.HCP_Opt_In_Referral_Status_Emails__c
                 FROM Patient_Delegate__c
                 WHERE Participant__r.Contact__c = :CommunityService.getUserContact().Id
         ];
