--- a/force-app/main/default/classes/ArticleService.cls
+++ b/force-app/main/default/classes/ArticleService.cls
@@ -11,37 +11,17 @@ public with sharing class ArticleService {
 
     public static void calculateExpirationDateBeforeInsert(List<Resource__c> resources) {
         for (Resource__c resource : resources) {
-            if (resource.Expiration_Date__c == null) {
-                if (resource.Posting_Date__c != null) {
-                    resource.Expiration_Date__c = resource.Posting_Date__c.addMonths(12);
-                } else {
-                    Date createResource = Date.today();
-                    resource.Posting_Date__c = createResource;
-                    resource.Expiration_Date__c = createResource.addMonths(12);
-                }
-            } else if (resource.Posting_Date__c == null) {
-                resource.Posting_Date__c = resource.Expiration_Date__c.addMonths(-12);
-            } else if (resource.Posting_Date__c > resource.Expiration_Date__c) {
-                resource.Expiration_Date__c = resource.Posting_Date__c.addMonths(12);
-
+            if (ResourceService.RESOURCE_SOURCE_THIRD_PARTY.equalsIgnoreCase(resource.Content_Class__c)) {
+                ArticleService.calculateExpirationDateBeforeInsert(resource);
             }
         }
 
     }
 
-    public static void calculateExpirationDateBeforeUpdate (List<Resource__c> resourcesNew, Map<Id, Resource__c> oldResMap) {
+    public static void calculateExpirationDateBeforeUpdate(List<Resource__c> resourcesNew, Map<Id, Resource__c> oldResMap) {
         for (Resource__c resource : resourcesNew) {
-            if (resource.Posting_Date__c != oldResMap.get(resource.Id).Posting_Date__c
-                    || resource.Expiration_Date__c != oldResMap.get(resource.Id).Expiration_Date__c) {
-                if (resource.Posting_Date__c != null) {
-                    resource.Expiration_Date__c = resource.Posting_Date__c.addMonths(12);
-                } else if (resource.Expiration_Date__c != null) {
-                    resource.Posting_Date__c = resource.Expiration_Date__c.addMonths(-12);
-                } else {
-                    Date createResource = Date.today();
-                    resource.Posting_Date__c = createResource;
-                    resource.Expiration_Date__c = createResource.addMonths(12);
-                }
+            if (ResourceService.RESOURCE_SOURCE_THIRD_PARTY.equalsIgnoreCase(resource.Content_Class__c)) {
+                ArticleService.calculateExpirationDateBeforeUpdate(resource, oldResMap.get(resource.Id));
             }
         }
     }
@@ -65,17 +45,49 @@ public with sharing class ArticleService {
     }
 
     public static String getStaticUrlImage(String imageName) {
-        List<StaticResource> resourceList= [SELECT Name, NamespacePrefix, SystemModstamp FROM StaticResource WHERE Name = 'PH_Default_Image'];
+        List<StaticResource> resourceList = [SELECT Name, NamespacePrefix, SystemModstamp FROM StaticResource WHERE Name = 'PH_Default_Image'];
 
         // Checking if the result is returned or not
-        if(resourceList.size() == 1){
+        if (resourceList.size() == 1) {
 
             // Getting namespace
             String namespace = resourceList[0].NamespacePrefix;
             // Resource URL
-            return '/resource/' + resourceList[0].SystemModstamp.getTime() + '/' + (namespace != null && namespace != '' ? namespace + '__' : '') +  'PH_Default_Image/' + imageName;
+            return '/resource/' + resourceList[0].SystemModstamp.getTime() + '/' + (namespace != null && namespace != '' ? namespace + '__' : '') + 'PH_Default_Image/' + imageName;
         } else {
             return '';
+        }
+    }
+
+    private static void calculateExpirationDateBeforeInsert(Resource__c resource) {
+        if (resource.Expiration_Date__c == null) {
+            if (resource.Posting_Date__c != null) {
+                resource.Expiration_Date__c = resource.Posting_Date__c.addMonths(12);
+            } else {
+                Date createResource = Date.today();
+                resource.Posting_Date__c = createResource;
+                resource.Expiration_Date__c = createResource.addMonths(12);
+            }
+        } else if (resource.Posting_Date__c == null) {
+            resource.Posting_Date__c = resource.Expiration_Date__c.addMonths(-12);
+        } else if (resource.Posting_Date__c > resource.Expiration_Date__c) {
+            resource.Expiration_Date__c = resource.Posting_Date__c.addMonths(12);
+
+        }
+    }
+
+    private static void calculateExpirationDateBeforeUpdate(Resource__c newResource, Resource__c oldResource) {
+        if (newResource.Posting_Date__c != oldResource.Posting_Date__c
+                || newResource.Expiration_Date__c != oldResource.Expiration_Date__c) {
+                if (newResource.Posting_Date__c != null) {
+                    newResource.Expiration_Date__c = newResource.Posting_Date__c.addMonths(12);
+                } else if (newResource.Expiration_Date__c != null) {
+                    newResource.Posting_Date__c = newResource.Expiration_Date__c.addMonths(-12);
+                } else {
+                    Date createResource = Date.today();
+                    newResource.Posting_Date__c = createResource;
+                    newResource.Expiration_Date__c = createResource.addMonths(12);
+                }
         }
     }
 
